# allp-manager

./: .gitignore  ALLP_CODEX_EXPANSION_PRIVILEGE_UI_PROMPT.md  ALLP_CODEX_INTERACTIVE_SCOPE_SELECTOR_PROMPT.md  ALLP_CODEX_MAKEFILE_INSTALL_AND_LOCAL_RELEASE_WORKFLOW.md  ALLP_CODEX_MASTER_PROMPT.md  ALLP_CODEX_REGRESSION_REPAIR_PROMPT.md  ALLP_CODEX_UX_HARDENING_PROMPT.md  ALLP_CODEX_V0.3.2_CONFIRMATION_DEV_UPDATES_PROMPT.md  ALLP_CODEX_V0.3.3_NODE_PARSERS_PROGRESS_FOCUSED_PROMPT.md  ALLP_CODEX_V0.3.3_SNAP_REPO_TODO_MAKEFILE_README_PROMPT.md  ALLP_CODEX_V0.3.3_SOFTWARE_IDENTITY_PROMPT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FILES.txt  LICENSE  Makefile  README.fa.md  README.md  ROADMAP.md  SECURITY.md  TODO.md
.githooks/: post-commit
docs/: ADDING_BACKEND.md  ALTERNATIVE_INSTALLERS.md  BACKEND_CONTRACT.md  CAPABILITY_MATRIX.md  CLI_CONTRACT.md  COMMANDS.md  CONFIRMATION_MODEL.md  DEVELOPER_UPDATES.md  FLATPAK_BACKEND.md  HOMEBREW_BACKEND.md  HOMEBREW_BOOTSTRAP.md  JSON_SCHEMA.md  LINUX_COVERAGE.md  NAME_COLLISIONS.md  NODE_ECOSYSTEM.md  NPM_BACKEND_PLAN.md  OFFICIAL_BOOTSTRAP.md  PREREQUISITES.md  PRIVILEGE_MODEL.md  PYTHON_ECOSYSTEM.md  RELEASE_MANIFEST.md  SECURITY_MODEL.md  SELF_UPDATE.md  SNAP_BACKEND.md  SOFTWARE_IDENTITY.md  TERMINAL_UI.md  V0_3_2_TEST_PLAN.md  V0_3_3_TEST_PLAN.md
release/: README.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.3.5.md  RELEASE_TITLE_v0.3.4.txt  RELEASE_TITLE_v0.3.5.txt
scripts/: check-architecture.sh  check_architecture.py  generate-release-manifest.py  release-common.sh  release-finalize.sh  (+5 more)
src/: lib.rs  (+1 more)
(+86 files in other folders)
