[package]
name = "allp"
version = "0.3.5"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "A transparent package-manager orchestrator for Linux"
repository = "https://github.com/Aliazadi-1776/allp"
readme = "README.md"
keywords = ["linux", "package-manager", "cli", "orchestrator"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
